[package]
name = "img-qoi"
version = "0.1.0"
edition = "2021"
description = "QOI (Quite OK Image) manipulation library"
readme = "README.md"
documentation = "https://docs.rs/img-qoi"
homepage = "https://github.com/taotao54321/img-qoi"
repository = "https://github.com/taotao54321/img-qoi"
license = "MIT"
keywords = ["image", "qoi"]
categories = ["multimedia::images"]

[dependencies]
arrayvec = "0.7.2"
byteorder = "1.4.3"
thiserror = "1.0.30"

[dev-dependencies]
anyhow = "1.0.51"
image = "0.23.14"
structopt = "0.3.25"
